# baggeroo

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
public/: default-profile.js
src/: App.vue  Bag.js  BagEntry.js  main.js  store.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: base.css
src/components/: BagEntriesTree.vue  Dropzone.vue  FileList.vue  FileTree.vue  HelpDialog.vue  Menu.vue  NewBagStep1.vue  NewBagStep2.vue  NewBagStep3.vue  NewBagStepper.vue  SettingsDialog.vue  SideMenu.vue  ViewContainer.vue
src/css/: styles.css
src/presets/lara/button/: index.js
src/presets/lara/treetable/: index.js
src/scss/: styles.scss
