[package]
name = "baggeroo"
version = "0.1.0"
description = "A Tauri app implementing the BagIt v1.0 specification."
authors = ["Henry Rosen <herosen@g.ucla.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0.0-beta.3"
tauri-plugin-store = "2.0.0-beta.4"

# BagIt library (forked from @https://github.com/pwinckles/bagr)
bagr = { git = "https://github.com/henry-r18/bagr.git" }

symlink = "0.1.0"
tempfile = "3.10.1"
